themes/twentytwentyfour/assets/css/style.css
/* ... */
@media not screen and (-webkit-device-pixel-ratio:1.25) {
    @media screen and (max-width:1200px)and (min-width:481px) {

        .locale-btn input:hover~div.labels:after,
        .locale-btn input:hover~div.labels:before {
            border: initial
        }
    }
}

@media screen and (max-width:480px) {
    header {
        padding: 30px 16px 10px
    }

    header #logo {
        -webkit-transform: scale(.65) translateX(-25px);
        transform: scale(.65) translateX(-25px)
    }

    .main-menu .up {
        overflow-x: hidden
    }

    .main-menu .up .main-links .link {
        justify-content: flex-start;
        padding-bottom: 16px
    }

    .main-menu .up .main-links .link .label {
        font-size: 40px;
        font-weight: 400
    }
}

@media screen and (max-width:480px)and (max-height:740px) {
    .main-menu .up .main-links .link .label {
        font-size: 24px
    }
}

@media screen and (max-width:480px) {
    .main-menu .up .follow-links {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        width: 100%
    }

    .main-menu .up .follow-links span {
        font-size: 14px
    }

    .main-menu .up .follow-links span:after,
    .main-menu .up .follow-links span:before {
        font-size: 14px;
        font-style: italic;
        font-weight: 400;
        text-decoration: underline
    }

    .main-menu .up .page-links {
        align-items: flex-start;
        display: flex;
        flex-direction: column;
        gap: 16px
    }

    .main-menu .up .page-links span {
        padding-right: 32px
    }

    .main-menu .up .page-links span:after,
    .main-menu .up .page-links span:before {
        font-size: 18px;
        font-style: italic;
        font-weight: 400
    }

    .main-menu.visible .up {
        gap: 32px;
        justify-content: flex-end;
        padding: 0 32px 40px;
        width: 100vw
    }

    .locale-btn {
        height: 32px;
        margin-right: 56px;
        width: 62px
    }

    .locale-btn .knobs:before,
    .locale-btn .labels:after,
    .locale-btn .labels:before {
        border-radius: 12px;
        font-size: 10px;
        height: 24px;
        line-height: 140%;
        width: 24px
    }

    .locale-btn input:active+.knobs:before {
        width: 38px
    }

    .locale-btn input:checked:active+.knobs:before {
        margin-left: -15px
    }

    .locale-btn input:checked+.knobs:before {
        left: 33px
    }

    .locale-btn input:hover~div.labels:after,
    .locale-btn input:hover~div.labels:before {
        border: initial
    }
}

.hero-root {
    align-items: center;
    display: flex;
    height: calc(100vh - 144px);
    justify-content: center;
    min-height: 600px
}

.hero-root .hero-desc {
    display: flex;
    flex-direction: column-reverse;
    margin-top: 20px
}

.hero-root .hero-desc .hero-button {
    margin-top: -20px;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content
}

.hero-root .hero-desc .hero-button a div {
    aspect-ratio: 1/1;
    background-image: url(/static/media/in-touch.5d367d47634a9f456e35.svg);
    background-position: 50%;
    background-repeat: no-repeat;
    background-size: contain;
    width: 200px
}

.hero-root .hero-desc .description {
    align-self: end;
    max-width: 400px
}

.hero-root .scroll-down {
    border: 1px solid var(--white);
    border-radius: 25px;
    bottom: 40px;
    height: 34px;
    left: 50%;
    margin-left: -20px;
    margin-top: -35px;
    position: absolute;
    width: 20px
}

.hero-root .scroll-down:before {
    -webkit-animation: scroll 1.5s infinite;
    animation: scroll 1.5s infinite;
    background: var(--white);
    border-radius: 4px;
    content: "";
    height: 8px;
    left: 50%;
    margin-left: -4px;
    position: absolute;
    top: 8px;
    width: 8px
}

.hero-root .scroll-text {
    display: none
}

.hero-root .block .motto {
    align-items: center;
    display: flex;
    flex-direction: column
}

.hero-root .block .motto .line {
    display: flex;
    flex-direction: row
}

.hero-root .block .motto .line .box .H2 {
    overflow: hidden;
    transition: all ease-in-out
}

.full-size {
    height: 100vh;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%
}

.background-img {
    background-size: contain;
    object-fit: contain
}

.parallax-background-img {
    background-image: url(/wp-content/themes/twentytwentyfour/assets/images/texture-bg.bbef3745b1be130266a7.svg);
    background-position: 50%;
    background-repeat: no-repeat;
    background-size: 120% 120%;
    -webkit-filter: contrast(200%);
    filter: contrast(200%);
    opacity: .2
}

.char {
    -webkit-animation: insert 1s ease-out 1 both;
    animation: insert 1s ease-out 1 both;
    display: inline-block
}

#floating-pointer {
    -webkit-animation: wiggle 3s ease-in-out infinite alternate;
    animation: wiggle 3s ease-in-out infinite alternate
}

@media screen and (min-width:1201px)and (-webkit-device-pixel-ratio:1.25) {
    .hero-root {
        height: calc(125vh - 144px)
    }

    .full-size {
        height: 125vh;
        min-height: 800px
    }
}
/* ... */

